--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,7 +10,7 @@ workflows:
       vars:
         XCODE_PROJECT: "AlmostDone.xcodeproj"   # или задай XCODE_WORKSPACE вместо XCODE_PROJECT
         XCODE_SCHEME: "AlmostDone"
-        BUNDLE_ID: "com.avtandilazikovb6"
+        BUNDLE_ID: "com.mnlaziko.deveAi"
         TEAM_ID: "OVERRIDE_BY_PROFILE"        # заменится значением из профиля
         EXPORT_METHOD: "app-store"
         # APP_VERSION: "1.1"                  # ← опционально, если хочешь поднять маркетинговую версию
